# lora-training-pipeline-mini

./: .active_session  .env  .last_session  README.md  pyproject.toml  run_pipeline.py  training_cycle_info.json
output/best_model/: adapter_config.json  placeholder.txt
src/: list_of_files.txt
src/lora_training_pipeline/: __version__.py  config.py
src/lora_training_pipeline/data_cleaning/: clean_filter.py
src/lora_training_pipeline/data_collection/: gradio_app.py
src/lora_training_pipeline/inference/: fastapi_inference.py  gradio_inference.py
src/lora_training_pipeline/training/: hyperparameter_tuning.py  lora_finetune.py  zenml_pipeline.py
src/lora_training_pipeline/utils/: __main__.py  dashboard.py  fastapi_singleton.py  fix_gradio_issue.py  fix_port_issues.py  helpers.py  parallel_startup.py  pid_file_handler.py  port_conflict_resolver.py  process_core.py  process_core.py.bak  process_executable.py  process_health.py  process_lock.py  process_management.py  process_patches.py  process_watchdog.py  python_version_check.py  run_pipeline_integration.py  run_pipeline_parallel.py  run_pipeline_patch.md  service_manager.py  validate_pid_file.py
src/lora_training_pipeline/utils/templates/: dashboard.html
